# six-sigma-typer

./: README.md  pyproject.toml
six_sigma_typer/: main.py
